--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="row ">
                 <div class="col-md-4 services ftco-animate ">
                     <div class="d-block d-flex ">
-                        <div class="icon  d-flex justify-content-center align-items-center " style="background-image: url('/images/newimages/products/apple-green-granite.jpg');">
+                        <div class="icon  d-flex justify-content-center align-items-center " style="background-image: url('/images/products/apple-green-granite.jpg');">
 
                         </div>
                         <div class="media-body pl-3 ">
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                     <div class="d-block d-flex ">
-                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/newimages/products/image.png');">
+                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/products/image.png');">
 
                         </div>
                         <div class="media-body pl-3  ftco-animated zoomIn">
@@ -245,7 +245,7 @@
                 </div>
                 <div class="col-md-4 services ftco-animate ">
                     <div class="d-block d-flex ">
-                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/newimages/products/blackmarble.PNG');">
+                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/products/blackmarble.PNG');">
 
                         </div>
                         <div class="media-body pl-3 ">
@@ -256,7 +256,7 @@
                     </div>
 
                     <div class="d-block d-flex ">
-                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/newimages/products/pink.png'); ">
+                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/products/pink.png'); ">
 
                         </div>
                         <div class="media-body pl-3 ftco-animated zoomIn">
@@ -269,7 +269,7 @@
 
                 <div class="col-md-4 services ftco-animate ">
                     <div class="d-block d-flex ">
-                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/newimages/products/Ziarat\ White.jpg');background-position: center right calc(2.25rem / 4); ">
+                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/products/white.jpg');background-position: center right calc(2.25rem / 4); ">
 
                         </div>
                         <div class="media-body pl-3 ">
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="d-block d-flex ">
-                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/newimages/products/dark-emperador-marble-500x500\ \(1\).jpg');">
+                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/products/dark-emperador.jpg');">
 
                         </div>
                         <div class="media-body pl-3 ">
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 pl-md-5 ">
-                    <div class="row justify-content-start py-7  " style="margin-top: 50px;">
+                    <div class="row justify-content-start py-7  ">
                         <div class="col-md-12 heading-section ftco-animate ">
                             <span class="subheading ">Welcome to Marble Arts</span>
                             <h3 class="mb-4 " style="color:#00b3b3 ">Now serving most unique marble from the land of Pakistan</h3>
@@ -527,7 +527,7 @@
             <div class="row d-flex ">
                 <div class="col-md-4 d-flex ">
                     <div class="blog-entry align-self-stretch ftco1-animated fadeIn ">
-                        <a href="blog-single.html " class="block-20 rounded " style="background-image: url( 'imaGES/newimages/image0\ \(1\).jpeg'); ">
+                        <a href="blog-single.html " class="block-20 rounded " style="background-image: url( 'imaGES/newimages/image1.jpeg'); ">
                         </a>
                         <div class="text mt-3 ">
                             <div class="posted mb-3 d-flex ">
@@ -631,8 +631,8 @@
                 </div>
 
                 <div class="col-md-3 ftco-animate ">
-                    <div class="work img d-flex align-items-end " style="background-image: url(images/newimages/image0\ \(1\).jpeg); ">
-                        <a href="images/newimages/image0\ \(1\).jpeg " class="icon image-popup d-flex justify-content-center align-items-center ">
+                    <div class="work img d-flex align-items-end " style="background-image: url(images/newimages/image1.jpeg); ">
+                        <a href="images/newimages/image1.jpeg " class="icon image-popup d-flex justify-content-center align-items-center ">
                             <span class="fa fa-expand "></span>
                         </a>
                         <div class="desc w-100 px-4 ">
@@ -655,7 +655,7 @@
                     <div class="ftco-footer-widget mb-3 ">
                         <h3 class="logo text-center ">
                             <a class=" " href="index.html "><img class="logo-default " src="images/newimages/favicon.ico " alt="logo "></a>
-                            <p class="mb-2 text-center ">Marble Arts</p>
+                            <p class="mb-3 text-center ">Marble Arts</p>
                         </h3>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4 ">
@@ -713,6 +713,8 @@
     </footer>
 
 
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
 
