--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="row ">
                 <div class="col-md-4 services ftco-animate ">
                     <div class="d-block d-flex ">
-                        <div class="icon  d-flex justify-content-center align-items-center " style="background-image: url('/images/products/apple-green-granite.jpg');">
+                       <div class="icon  d-flex justify-content-center align-items-center " id="iconimage" >
 
                         </div>
                         <div class="media-body pl-3 ">
