--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     </div>
 
                     <div class="d-block d-flex ">
-                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/products/pink.png'); ">
+                        <div class="icon d-flex justify-content-center align-items-center " style="background-image: url('/images/newimages/pink.png'); ">
 
                         </div>
                         <div class="media-body pl-3 ftco-animated zoomIn">
